Adjustable preview pane in Clippings Sidebar (issue #511)

--- a/wx-src/pages/sidebar.css
+++ b/wx-src/pages/sidebar.css
@@ -472,6 +472,7 @@ ul.fancytree-container {
     height: 2px;
     background-color: var(--color-tree-splitter);
     border-top: 1px solid var(--color-tree-splitter-border);
+    cursor: row-resize;
 }
 
 #preview-pane {
